# Speed-On

./: .gitignore  Cargo.toml  README.md  ci-fail.txt  ci2.txt  ci3.txt  ci4.txt  ci5.txt  ci6.txt  ci7.txt  ci8.txt  ci9.txt
.github/workflows/: build-core.yml  rust-ci.yml  rust.yml
crates/speed_on_core/: Cargo.toml
crates/speed_on_core/src/: alias.rs  api.rs  domain.rs  error.rs  ipc.rs  lib.rs  logging.rs  pinyin_alias.rs  ports.rs  search.rs  service.rs
crates/speed_on_core/src/service/: index.rs
crates/speed_on_core/src/storage/: mod.rs  schema.rs  search_alias_repository.rs  sqlite.rs
crates/speed_on_core/tests/: api_contract_tests.rs  ipc_contract_tests.rs  logging_tests.rs  pinyin_alias_tests.rs  recommendation_service_tests.rs  schema_tests.rs  search_alias_builder_tests.rs  search_service_tests.rs  sqlite_store_tests.rs
crates/speed_on_ipc_stdio/: Cargo.toml
crates/speed_on_ipc_stdio/src/: lib.rs  main.rs
crates/speed_on_ipc_stdio/tests/: stdio_transport_tests.rs
crates/speed_on_platform/: Cargo.toml
crates/speed_on_platform/src/: application_scanner.rs  lib.rs  opener.rs
crates/speed_on_platform/tests/: application_scanner_tests.rs  resource_opener_tests.rs
docs/adr/: 0001-core-backend-boundaries.md  0002-search-and-logging-contracts.md  0003-sqlite-repository.md  0004-core-api-contract.md  0005-ipc-transport.md  0006-stdio-json-lines-transport.md  0007-open-resource-contract.md  0008-command-resource-opener.md  0009-application-scanner.md  0010-search-alias-builder.md
docs/api/: core-api-v1.md
docs/ipc/: protocol-v1.md  stdio-json-lines.md
speed-on-client/: App.axaml  App.axaml.cs  Program.cs  README.md  app.manifest  speed-on-client.csproj
speed-on-client/Models/: ResultItem.cs
speed-on-client/Services/: BrowserDetector.cs  CoreIpcClient.cs  GlobalHotkeyService.cs  InputClassifier.cs  ResourceOpener.cs
speed-on-client/ViewModels/: MainViewModel.cs
speed-on-client/Views/: MainWindow.axaml  MainWindow.axaml.cs
