[package]
name = "speed_on_ipc_stdio"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "speed-on-ipc-stdio"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
speed_on_core = { path = "../speed_on_core" }
speed_on_platform = { path = "../speed_on_platform" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
